[package]
name = "rbtrack-node-api"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true }
once_cell = { workspace = true }
paste = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true, features = ["arc_lock"] }
rbtrack-types = { path = "../rbtrack-types", features = ["opencv-types"] }
petgraph = "0.8.2"
indexmap = "2.11.0"
itertools = "0.14.0"

[features]
default = []
opencv-types = ["rbtrack-types/opencv-types"]

