[package]
name = "rbtrack-types"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
paste = { workspace = true }
variation = { workspace = true }
graphile_worker_extensions = { workspace = true }
parking_lot = { workspace = true }
opencv = { version = "0.95.0", optional = true }

[features]
default = []
opencv-types = ["opencv"]